<resources>
    <string name="app_name">core_2</string>
    <string name="name_gwoc">Great Wall Of China</string>
    <string name="name_eiffel">Eiffel Tower</string>
    <string name="name_colosseum">Colosseum</string>
    <string name="name_opera">Sydney Opera House</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
</resources>