<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_gwoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/great_wall_of_china" />

                <TextView
                    style="@style/MyRedText"
                    android:id="@+id/name_gwoc"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:text="@string/name_gwoc"
                    android:textAlignment="center" />

                <TextView
                    style="@style/MyBlueText"
                    android:id="@+id/number_1"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/number_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_eiffel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/paris_eiffel_tower" />

                <TextView
                    style="@style/MyRedText"
                    android:id="@+id/name_eiffel"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/name_eiffel" />

                <TextView
                    style="@style/MyBlueText"
                    android:id="@+id/number_2"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/number_2" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_colosseum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/rome_colosseum" />

                <TextView
                    style="@style/MyRedText"
                    android:id="@+id/name_colosseum"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/name_colosseum" />

                <TextView
                    style="@style/MyBlueText"
                    android:id="@+id/number_3"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/number_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_opera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sydney_opera_house" />

                <TextView
                    style="@style/MyRedText"
                    android:id="@+id/name_opera"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/name_opera" />

                <TextView
                    style="@style/MyBlueText"
                    android:id="@+id/number_4"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/number_4" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>